--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -218,6 +218,14 @@ public without sharing class PatientDelegateService {
         if(patientDelegates.size() > 0) return patientDelegates[0].Participant__r;
         return null;
     }
-    
+
+    public static List<Id> getDelegatedContactIdsEmailOptIn(Id participantContactId) {
+        List<Id> contacts = new List<Id>();
+        for(Contact c : getDelegateContacts(participantContactId)) {
+            if(c.Participant_Opt_In_Status_Emails__c) contacts.add(c.Id);
+        }
+
+        return contacts;
+    }
 }
 
