PEH-713 PEH-714 filter visits by PSE fix

--- a/force-app/main/default/classes/PatientVisitService.cls
+++ b/force-app/main/default/classes/PatientVisitService.cls
@@ -19,7 +19,7 @@ public inherited sharing class PatientVisitService {
     private List<Patient_Visit__c> getVisits(String visitMode, Integer limitNumber) {
 
         ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
-        if (pState == null || pState.ctp == null || pState.ctp.Visit_Plan__c == null || !pState.showVisits) {
+        if (pState == null || pState.ctp == null || pState.ctp.Visit_Plan__c == null || !pState.showVisits || pState.pse == null) {
             return null;
         }
 
@@ -32,6 +32,7 @@ public inherited sharing class PatientVisitService {
                 'Is_Adhoc__c ' +
                 'FROM Patient_Visit__c ' +
                 'WHERE Visit__r.Visit_Plan__c = \'' + pState.ctp.Visit_Plan__c + '\'' +
+                ' AND Participant_Study_Enrollment__c = \'' + pState.pse.Id + '\'' +
                 ' AND Status__c ' + (VISIT_MODE_CURRENT == visitMode ? '=' : '!=') + '\'' + VISIT_STATUS_PENDING + '\'' +
                 ' ORDER BY Order__c' +
                 (limitNumber == null ? '' : ' LIMIT ' + limitNumber);
