--- a/force-app/main/default/classes/StudySiteService.cls
+++ b/force-app/main/default/classes/StudySiteService.cls
@@ -168,6 +168,7 @@ public without sharing class StudySiteService {
             'Study_Site_Type__c',
             'Study_Site_Phone__c',
             'Study_Site_Email__c',
+            'Account_Was_Changed__c',
             'Site__r.Name',
             'Site__r.BillingAddress',
             'Site__r.BillingCountry',
@@ -180,6 +181,7 @@ public without sharing class StudySiteService {
             'Site__r.BillingLongitude',
             'Site__r.Driving_Directions__c',
             'Site__r.Parking_Instructions__c',
+            'Site__r.ParentId',
             'Clinical_Trial_Profile__c',
             'Clinical_Trial_Profile__r.Id',
             'Clinical_Trial_Profile__r.Study_Title__c',
