--- a/force-app/main/default/classes/Test_BaseCRCPCommunity.cls
+++ b/force-app/main/default/classes/Test_BaseCRCPCommunity.cls
@@ -809,4 +809,49 @@ private class Test_BaseCRCPCommunity {
         }
         Test.stopTest();
     }
+
+    @IsTest
+    static void testSaveNewAddress() {
+        init();
+        Test.startTest();
+        piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        Account testAccount = new Account(Name='Test Name', BillingStreet='BillingStreet');
+        insert testAccount;
+        studySite.Site__c = testAccount.Id;
+        update studySite;
+        System.runAs(piUser) {
+            studySite = [SELECT Id, Name, Site__r.ParentId, Site__r.Name,Site__r.Id,Site__r.BillingStreet FROM Study_Site__c WHERE Id=:studySite.Id];
+            studySite.Site__r.BillingStreet = 'Test Street';
+            String ssId = studySite.Site__r.Id;
+            studySite.Site__r.Id = null;
+            String status = StudyListViewController.saveSSAddress(JSON.serialize(studySite));
+            Study_Site__c testStudySite = [SELECT Id, Name, Site__r.ParentId,Site__r.Name, Site__r.BillingStreet FROM Study_Site__c WHERE Id = :studySite.Id];
+            System.assertNotEquals(ssId,testStudySite.Site__r.Id);
+            testStudySite.Site__r.BillingStreet = 'Test Street 2';
+            String status2 = StudyListViewController.saveSSAddress(JSON.serialize(testStudySite));
+            Study_Site__c testStudySite2 = [SELECT Id, Name, Site__r.ParentId,Site__r.Name, Site__r.BillingStreet FROM Study_Site__c WHERE Site__r.BillingStreet = 'Test Street 2'];
+            System.assertEquals(testStudySite2.Site__r.ParentId,testStudySite.Site__r.Id);
+            testStudySite2.Site__r.BillingStreet = 'Test Street 3';
+            String status3 = StudyListViewController.saveSSAddress(JSON.serialize(testStudySite2));
+            Study_Site__c testStudySite3 = [SELECT Id, Name, Site__r.ParentId,Site__r.Name, Site__r.BillingStreet FROM Study_Site__c WHERE Site__r.BillingStreet = 'Test Street 3'];
+            System.assertEquals(testStudySite2.Site__r.Id,testStudySite3.Site__r.Id);
+        }
+        Test.stopTest();
+    }
+
+
+    @IsTest
+    static void testSaveSSDetails() {
+        init();
+        Test.startTest();
+        piUser = [SELECT Id FROM User WHERE ContactId = :piContact.Id];
+        System.runAs(piUser) {
+            studySite = [SELECT Id, Site_Staff__c, Study_Site_Email__c,Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Id =: studySite.Id];
+            studySite.Study_Site_Phone__c ='123456789';
+            String status = StudyListViewController.saveSSChanges(JSON.serialize(studySite));
+            Study_Site__c updatedSS = [SELECT Id, Site_Staff__c, Study_Site_Email__c,Study_Site_Phone__c, Site__c FROM Study_Site__c WHERE Id =: studySite.Id];
+            System.assertEquals(studySite.Study_Site_Phone__c, updatedSS.Study_Site_Phone__c);
+        }
+        Test.stopTest();
+    }
 }
