PEH-440 PEH-739 PEH-740

--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -326,12 +326,12 @@ public without sharing class StudyDetailViewController {
                         Label.PG_SW_Tab_Resources,
                         backHomeAction
                 ));
-                /*tabs.add(new StudyTab(
+                tabs.add(new StudyTab(
                         'tab-lab-results',
                         'reports',
                         Label.PG_SW_Tab_Lab_Results,
                         backHomeAction
-                ));*/
+                ));
             } else {
                 tabs.add(new StudyTab(
                         'tab-tasks',
